# bankai_terminal

./: .env.example  .gitignore  Agent.md  Bankai.pem  Bankai.pem:Zone.Identifier  Cargo.toml  Synth.pem  bankai.pem  build.rs  docker-compose.yml  polymarket_builder_signing_sdk.md  polymarket_ctf-exchange.md  polymarket_pybuilder_signing_sdk.md  polymarket_relayer_client.md  polymarket_resolution_subgraph.md  polymarket_rust_clob_client.md
abi/: .keep  CTFExchange.json  ConditionalTokens.json
config/: config.json  strategies.json
docs/: allora_documentation.md  implementation_plan.md  polymarket_documentation.md  project_request.md  project_rules.md  technical_spec.md
migrations/: 20240101000000_init.sql
python/: .keep  __init__.py  meta_brain.py  requirements.txt  strategy.py
python/tests/: test_strategy.py
scripts/: dry_run.sh  fix_dns.sh
src/: error.rs  lib.rs  main.rs
src/accounting/: bankroll_refresh.rs  keys.rs  mod.rs  no_money.rs  open_orders_refresh.rs  pnl.rs  reconcile.rs  recovery.rs  redemption.rs  trade_events.rs  utils.rs
src/config/: mod.rs
src/engine/: analysis.rs  core.rs  mod.rs  orders.rs  python_host.rs  risk.rs  trader.rs  types.rs
src/execution/: allowances.rs  cancel.rs  direct.rs  mod.rs  nonce.rs  orchestrator.rs  payload_builder.rs  relayer.rs  signer.rs
src/oracle/: allora.rs  binance.rs  chainlink.rs  mod.rs  polymarket_discovery.rs  polymarket_rtds.rs  polymarket_user_ws.rs
src/security/: mod.rs
src/storage/: database.rs  mod.rs  orderbook.rs  redis.rs
src/telemetry/: health.rs  logging.rs  metrics.rs  mod.rs  preflight.rs
src/ui/: mod.rs  widgets.rs
tests/: simulation_test.rs
