# /**
#  * @description
#  * Cargo manifest for the Bankai Terminal core engine.
#  *
#  * @dependencies
#  * - tokio: async runtime
#  * - tracing: structured logging
#  * - serde: config and data serialization
#  * - sqlx: TimescaleDB/Postgres access
#  * - redis: hot state storage
#  *
#  * @notes
#  * - Keep dependency versions aligned with project requirements.
#  */
[package]
name = "bankai_terminal"
version = "0.1.0"
edition = "2021"

[build-dependencies]
pyo3-build-config = "0.21"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
arc-swap = "1.6"
notify = "6.1"
thiserror = "1.0"
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.21"
secrecy = "0.8"
rpassword = "7.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
metrics = "0.21"
uuid = { version = "1.7", features = ["v4"] }
pyo3 = { version = "0.21", features = ["auto-initialize"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
ethers-core = { version = "2.0", features = ["eip712"] }
ethers-signers = "2.0"
ethers-providers = "2.0"
hmac = "0.12"
sha2 = "0.10"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
